[project]
name = ""
version = ""
description = ""
authors = [
    {name = "BlueGlassBlock", email = "blueglassblock@outlook.com"},
]
dependencies = [
    "typing-extensions>=4.3.0",
    "rich>=12.5.1",
    "pydantic>=1.10.1",
]
requires-python = ">=3.9"
license = {text = "GPL-3.0"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.8.0",
    "isort>=5.10.1",
]
